Añadimos la variable global GlobalQuiz

--- a/templates/basic/test.html
+++ b/templates/basic/test.html
@@ -49,6 +49,11 @@
   </script>
 </head>
 <body>
+
+  <script type="text/javascript">
+    var GlobalQuiz = {TrueFalse:TrueFalse, MultiList:MultiList, Fill:Fill, "New quiz":{}};
+  </script>
+
   <div class="body-wrapper">
     <div id="embed-wrapper" class="wrapper cf faded">
 
@@ -70,6 +75,7 @@
     </div>
 
   </div>
+  
 </body>
 </html>
 
