Añadimos la variable global GlobalQuiz

--- a/public/templates/basic/index.html
+++ b/public/templates/basic/index.html
@@ -52,6 +52,11 @@
   <meta property="og:image:height" content="200">
 </head>
 <body>
+
+  <script type="text/javascript">
+    var GlobalQuiz = {TrueFalse:TrueFalse, MultiList:MultiList, Fill:Fill, "New quiz":{}};
+  </script>
+
   <div class="body-wrapper">
     <div id="embed-wrapper" class="wrapper cf faded">
       <div id="video-container" class="video-container" data-butter="target">
@@ -63,5 +68,6 @@
       </div>
     </div>
   </div>
+  
 </body>
 </html>
