Establecemos el estilo y tamaño del diálogo QuizManager

--- a/public/css/dialog.less
+++ b/public/css/dialog.less
@@ -71,6 +71,17 @@
 
 }
 
+// Edited by Me
+.quizmanager {
+  margin-left:auto;
+  margin-right:auto;
+  width: 900px;
+  height: 80%;
+  background-color: #fff;
+  border: 1px solid #eee;
+  border-radius: 0px;
+}
+
 .butter-feedback-form {
   padding: 0;
   background: lighten( #EEE, 3% );
@@ -258,3 +269,5 @@
   50% { right: 345px; }
   100% { right: 360px; }
 }
+
+
