Añadimos el botón Quiz Manager que disparará el Diálogo

--- a/public/src/layouts/header.html
+++ b/public/src/layouts/header.html
@@ -21,6 +21,7 @@
             <li><a class="butter-share-btn butter-btn btn-light butter-disabled" target="_blank"><span class="icon icon-only icon-share"></span> Share</a></li>
           </ul>
         </div>
+        <div title="Create, Edit and Export your quizzes" class="butter-btn btn-red butter-quizmanager-btn">Quiz Manager</div>
       </li>
     </ul>
   </header>
