--- a/templates/basic/test.html
+++ b/templates/basic/test.html
@@ -59,8 +59,8 @@
 
       <div class="loading-message"></div>
 
-      <div id="video-container" class="video-container" data-butter="target">
-        <div id="video" class="video" data-butter="media"></div>
+      <div id="video-container" class="video-container" data-butter="target" data-butter-default>
+        <div id="video" style="display:none" class="video" data-butter="media"></div>
       </div>
 
       <div class="sidebar">
@@ -69,7 +69,7 @@
     </div>
     
     <div id="embed-wrapper" class="wrapper cf faded">
-      <div id="container-div" class="container-div" data-butter="target" data-butter-default>
+      <div id="container-div" class="container-div" data-butter="target">
         <div id="quizArea" class="quizArea" data-butter="media"></div>
       </div>
     </div>
