Fix plugins quizme & mvideo

--- a/public/templates/basic/test.html
+++ b/public/templates/basic/test.html
@@ -31,10 +31,10 @@
   <script src="../assets/editors/googlemap.js" data-butter-exclude></script>
   <script src="../assets/editors/twitter/twitter.js" data-butter-exclude></script>
   <script src="template.js" data-butter-exclude></script>
-    <!--   NEW   -->
-    <script src="../assets/plugins/quizme/quiz.js"></script>
-    <script src="../assets/plugins/quizme/jQuizMe.js"></script>
-    <link   rel="stylesheet" type="text/css" href="../assets/plugins/quizme/popcorn.quizme.css"/>
+  <!--   NEW   -->
+  <script src="../assets/plugins/quizme/quiz.js"></script>
+  <script src="../assets/plugins/quizme/jQuizMe.js"></script>
+  <link   rel="stylesheet" href="../assets/plugins/quizme/popcorn.quizme.css"/>
 
   <script type="text/javascript">
     var _gaq = _gaq || [];
