--- a/public/templates/basic/test.html
+++ b/public/templates/basic/test.html
@@ -21,8 +21,8 @@
   <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet">
 
   <script src="../../src/butter.js" data-butter-exclude></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+  <script src="../assets/jquery.min.js"></script>
+  <script src="../assets/jquery-ui.min.js"></script>
   <script src="../assets/editors/editorhelper.js" data-butter-exclude></script>
   <script src="../assets/editors/wikipedia.js" data-butter-exclude></script>
   <script src="../assets/editors/popup/popup.js" data-butter-exclude></script>
@@ -35,7 +35,7 @@
   <script src="../assets/plugins/quizme/quiz.js"></script>
   <script src="../assets/plugins/quizme/jQuizMe.js"></script>
   <link   rel="stylesheet" href="../assets/plugins/quizme/popcorn.quizme.css"/>
-
+<!-- 
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-35433268-2']);
@@ -47,6 +47,7 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
   </script>
+-->
 </head>
 <body>
 
