Add module TrackNetwork (Where'll be the conexions of tracks)

--- a/public/css/butter.ui.css
+++ b/public/css/butter.ui.css
@@ -3023,8 +3023,13 @@ textarea.url {
 }
 .tracks-container {
   padding-bottom: 30px;
-  position: relative;
+  position: absolute !important; /* default relative */
   overflow: hidden;
+}
+
+/* Style for Canvas */
+#tracks-container-canvas {
+  position: absolute !important;
 }
 /*********************************************************
 * Track
