--- a/public/src/layouts/media-instance.html
+++ b/public/src/layouts/media-instance.html
@@ -7,6 +7,7 @@
   <div class="media-container">
     <div class="tracks-container-wrapper">
       <div class="tracks-container"></div>
+      <canvas class="tracks-container-canvas" id="tracks-container-canvas" width="1700px" height="92px"></canvas>
     </div>
   </div>
 </div>
