Calculate coords for lines between tracks

--- a/public/css/butter.ui.less
+++ b/public/css/butter.ui.less
@@ -26,3 +26,8 @@
 @import "super-scrollbar";
 
 @import "webmakernav";
+
+/* Style for Canvas */
+#tracks-container-canvas {
+  position: absolute !important;
+}
