--- a/public/templates/basic/test.html
+++ b/public/templates/basic/test.html
@@ -23,6 +23,7 @@
   <script src="../../src/butter.js" data-butter-exclude></script>
   <script src="../assets/jquery.min.js"></script>
   <script src="../assets/jquery-ui.min.js"></script>
+  <script src="../assets/kinetic-v4.7.0.min.js"></script>
   <script src="../assets/editors/editorhelper.js" data-butter-exclude></script>
   <script src="../assets/editors/wikipedia.js" data-butter-exclude></script>
   <script src="../assets/editors/popup/popup.js" data-butter-exclude></script>
