Draw lines between tracks with KineticJS

--- a/public/src/layouts/media-instance.html
+++ b/public/src/layouts/media-instance.html
@@ -6,7 +6,7 @@
   </div>
   <div class="media-container">
     <div class="tracks-container-wrapper">
-      <canvas class="tracks-container-canvas" id="tracks-container-canvas" width="1700px" height="92px"></canvas>
+      <div id="tracks-container-canvas"></div>
       <div class="tracks-container"></div>
     </div>
   </div>
