Remove Items from the webmakernav, and compensate style

--- a/public/css/butter.ui.less
+++ b/public/css/butter.ui.less
@@ -31,3 +31,14 @@
 #tracks-container-canvas {
   position: absolute !important;
 }
+
+/* Compensate for the header */
+.butter-header {
+    height: 62px;
+}
+.butter-editor-area,
+.butter-editor-close-btn {
+    top: 62px;
+}
+
+
