--- a/public/src/layouts/header.html
+++ b/public/src/layouts/header.html
@@ -1,6 +1,5 @@
 <div class="butter-header" data-butter-exclude>
-  <nav id="webmaker-nav"></nav>
-  <a href="http://www.mozilla.org/" id="tabzilla">mozilla</a>
+  <!-- <a href="http://www.mozilla.org/" id="tabzilla">mozilla</a> -->
   <header class="butter-header-primary">
     <div class="butter-logo"></div>
     <ul class="butter-nav">
@@ -25,5 +24,6 @@
         <div title="Create, Edit and Export your quizzes" class="butter-btn btn-red butter-quizmanager-btn">Quiz Manager</div>
       </li>
     </ul>
+    <nav id="webmaker-nav"></nav>
   </header>
 </div>
