--- a/public/templates/basic/test.html
+++ b/public/templates/basic/test.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../assets/plugins/text/popcorn.text.css">
   <link rel="stylesheet" href="../assets/plugins/wikipedia/popcorn.wikipedia.css">
 
-  <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet">
+  <!-- <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet"> -->
 
   <script src="../../src/butter.js" data-butter-exclude></script>
   <script src="../assets/jquery.min.js"></script>
