when media is 'out of flow' border-color -> red

--- a/public/css/butter.ui.less
+++ b/public/css/butter.ui.less
@@ -41,4 +41,8 @@
     top: 62px;
 }
 
+/* Selected track event "out of flow" */
+.butter-track-event.out-of-flow {
+    border-color: rgb(181, 63, 63); // red
+}
 
