--- a/public/templates/basic/test.html
+++ b/public/templates/basic/test.html
@@ -57,7 +57,7 @@
 
       <div class="loading-message"></div>
 
-      <div id="video-container" class="video-container" data-butter="target" data-butter-default>
+      <div id="video-container" class="container-pop" data-butter="target" data-butter-default>
         <div id="video" style="display:none" class="video" data-butter="media"></div>
       </div>
 
@@ -67,9 +67,7 @@
     </div>
     
     <div id="embed-wrapper" class="wrapper cf faded">
-      <div id="container-div" class="container-div" data-butter="target">
-        <div id="quizArea" class="quizArea" data-butter="media"></div>
-      </div>
+      <div id="container-div" class="container-pop" data-butter="target"></div>
     </div>
 
   </div>
