--- a/public/css/butter.ui.less
+++ b/public/css/butter.ui.less
@@ -46,3 +46,8 @@
     border-color: rgb(181, 63, 63); // red
 }
 
+/* Change background color for tracks running */
+.butter-track-event.running:not(.hideFlow) {
+    background-color: lavender;
+}
+
