--- a/public/src/layouts/trackevent.html
+++ b/public/src/layouts/trackevent.html
@@ -5,6 +5,8 @@
     <div class="title"></div>
   </div>
 
+  <div class="handle-point left-handle-line"></div>
+  <div class="handle-point right-handle-line"></div>
   <div class="handle left-handle"></div>
   <div class="handle right-handle"></div>
 
